plugins/groovy/testdata/highlighting/AnnotationFieldWithoutType.groovy
@interface Annotation {
  def <error descr="Field in annotation should have type declaration">field</error> = 22
}
